--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dotenv": "^16.4.5",
     "yaml": "^2.5.0",
     "node-fetch": "^3.3.2",
-    "@discordjs/voice": "^0.17.1",
+    "@discordjs/voice": "0.17.0",
     "libsodium-wrappers": "^0.7.13",
     "opusscript": "^0.0.8",
     "prism-media": "^1.3.5",
